--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,14 +2,36 @@
     box-sizing: border-box;
 }
 
-.App {
-    text-align: center;
-}
-
 h1 {
     font-family: 'Star Jedi Outline';
     font-weight: 200;
     font-size: 60px;
+    margin-right: 20%;
+}
+
+header {
+    display: flex;
+    justify-content: space-around;
+    align-items: center
+}
+
+.change-btn {
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 20px;
+}
+
+.btns {
+    border-radius: 15px;
+    cursor: pointer;
+    font-family: 'Raleway';
+    font-size: 14px;
+    padding: 10px;
+    width: 150px;
+}
+
+.favorited {
+    font-size: 12px;
 }
 
 
