--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,5 +1,6 @@
 .card {
     align-items: center;
+    background-color: white;
     border: 1px solid black;
     border-radius: 5px;
     display: flex;
@@ -10,6 +11,7 @@
     justify-content: space-around;
     margin: auto;
     margin-bottom: 20px;
+    opacity: 0.8;
     padding: 10px;
     width: 300px;
 }
