--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,5 +1,5 @@
 .card {
-    align-items: center;
+    /* align-items: center; */
     background-color: white;
     border: 1px solid black;
     border-radius: 5px;
@@ -14,4 +14,14 @@
     opacity: 0.75;
     padding: 10px;
     width: 300px;
+}
+
+h2 {
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.headers {
+    font-size: 20px;
+    font-weight: 900;
 }
