--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,8 +5,9 @@ header {
 }
 
 .change-btn {
-  display: grid;
-  margin-bottom: 20px;
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 50px;
 }
 
 .btns {
@@ -18,4 +19,9 @@ header {
   padding: 10px;
   width: 150px;
   margin: 1%;
+}
+
+.btns:hover {
+  background-color: #8DB4ED;
+  font-weight: bold;
 }
