--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,5 +1,4 @@
 .card {
-    /* align-items: center; */
     background-color: white;
     border: 1px solid black;
     border-radius: 5px;
@@ -24,7 +23,24 @@ h2 {
 .headers {
     font-size: 20px;
     font-weight: 900;
-  
+}
+
 .active {
     color: yellow;
+}
+
+.favorite-btn {
+    margin: 0 20%;
+    padding: 2% 7%;
+    border: 2px black solid;
+    font-size: 1.3em;
+}
+
+.favorite-btn:hover {
+    background-color: yellow;
+}
+
+button {
+    border: 0px;
+    outline: none;
 }
