--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -25,3 +25,20 @@ header {
   background-color: #8DB4ED;
   font-weight: bold;
 }
+
+@media screen and (max-width: 650px) {
+  header {
+    flex-direction: column;
+    margin: auto;      
+  }
+
+  .change-btn {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  h1 {
+    margin: auto;
+  }
+
+}
