--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,9 @@
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
 header {
   display: flex;
   justify-content: space-around;
@@ -38,19 +44,42 @@ header {
 }
 
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 750px) {
   header {
     flex-direction: column;
-    margin: auto;      
+    align-items: center;
+    margin: 20px;      
+    margin-top: 50px;
   }
 
   .change-btn {
     flex-direction: column;
     align-items: center;
+    margin: 20px;
   }
 
   h1 {
     margin: auto;
   }
 
+  .btns {
+    width: 550px;
+  }
+
+}
+
+@media screen and (max-width: 450px) {
+  .star-wars-font {
+    width: 300px;
+    margin: 20px 50px;
+  }
+
+  header {
+    flex-direction: row;
+  }
+
+  .btns {
+    width: 350px;
+  }
+  
 }
