--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -25,7 +25,7 @@ h2 {
     font-weight: 900;
 }
 
-.active {
+.favorite {
     background-color: yellow;
 }
 
@@ -38,6 +38,12 @@ h2 {
 
 .favorite-btn:hover {
     background-color: yellow;
+}
+
+.no-favorites {
+    color: white;
+    font-size: 2em;
+    margin: 5% 39%;
 }
 
 button {
