--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -26,8 +26,8 @@ header {
 }
 
 .btns:hover {
-  background-color: #8DB4ED;
+  background-color: rgb(233, 240, 240);
   font-weight: bold;
   outline: none;
-  color: white;
+  color: rgb(226, 96, 9);
 }
