more button almost functioning, need to re-render

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -22,7 +22,6 @@ h2 {
 
 .headers {
     font-size: 20px;
-    font-weight: 900;
 }
 
 .favorite {
@@ -53,4 +52,8 @@ button {
 
 .fa-meteor {
     color: orangered;
+}
+
+.card-info {
+    font-size: 1.2em;
 }
