--- a/src/components/Container/Container.css
+++ b/src/components/Container/Container.css
@@ -3,7 +3,6 @@
     align-items: center;
     flex-wrap: wrap;
     margin: auto;
-    max-lines: <2>;
 }
 
 .back-btn {
@@ -23,10 +22,13 @@
 }
 
 .showMoreBtn {
-    width: 100px;
-    height: 50px;
     color: white;
     background-color: turquoise;
-    margin: 2% 45%;
-    border-radius: 50%;
+    margin: 2% 42%;
+    border-radius: 15px;
+    font-family: 'Raleway';
+    font-size: 16px;
+    opacity: 0.8;
+    padding: 10px;
+    width: 150px;
 }
