--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -3,7 +3,7 @@
     border: 1px solid black;
     border-radius: 5px;
     display: flex;
-    flex: 0 1 30%;
+    flex: 0 1 20%;
     flex-direction: column;
     font-family: 'Raleway';
     font-size: 14px;
@@ -17,8 +17,9 @@
 }
 
 h2 {
-    font-size: 18px;
+    font-size: 1.5em;
     font-weight: 500;
+    margin: 0 25px;
 }
 
 .headers {
@@ -56,5 +57,6 @@ button {
 }
 
 .card-info {
-    font-size: 1.2em;
+    font-size: 1.5em;
+    margin: 0 25px;
 }
